<resources>
    <string name="app_name">Log Cabin</string>
    <string name="logo_description">Cabin Logo</string>
    <string name="recently_used"><u>RECENTLY USED</u></string>
    <string name="my_apps"><u>MY APPS</u></string>
    <string name="add_account">Add</string>
    <string name="title_activity_account_activity">account_activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

